--- a/config/database.yml
+++ b/config/database.yml
@@ -1,6 +1,6 @@
 development:
   adapter: postgresql
-  database: surveyor_proto
+  database: surveyor_proto_dev
   pool: 5
   timeout: 5000
 
@@ -9,7 +9,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: postgresql
-  database: surveyor_proto
+  database: surveyor_proto_test
   pool: 5
   timeout: 5000
 
