--- a/config/database.yml
+++ b/config/database.yml
@@ -1,6 +1,6 @@
 development:
   adapter: postgresql
-  database: surveyor_proto_dev
+  database: foolscap_survey_dev
   pool: 5
   timeout: 5000
 
@@ -9,12 +9,12 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: postgresql
-  database: surveyor_proto_test
+  database: foolscap_survey_test
   pool: 5
   timeout: 5000
 
 production:
   adapter: postgresql
-  database: surveyor_proto
+  database: foolscap_survey
   pool: 5
   timeout: 5000
