Add precompiled surveyor assets

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,7 +1,9 @@
 ---
 rails.png: rails-be8732dac73d845ac5b142c8fb5f9fb0.png
 application.js: application-d0c546ece50f66541afe0d0345741bec.js
+surveyor_all.js: surveyor_all-3f68a1550d56fe37a9f9188948f9537d.js
 application.css: application-9826003eac80c070948a1f27d6d28b70.css
+surveyor_all.css: surveyor_all-9826003eac80c070948a1f27d6d28b70.css
 surveyor/next.gif: surveyor/next-ef2eba6ee3fa8f15712427fddc2acbca.gif
 surveyor/prev.gif: surveyor/prev-d03326666232cd8ac4c53bdf99bf0ada.gif
 surveyor/ui-bg_glass_100_f6f6f6_1x400.png: surveyor/ui-bg_glass_100_f6f6f6_1x400-fc46298be15cb1f3815e1f64d5fc275c.png
